@@ -14,6 +14,16 @@
 		margin: 0 0 4px 4px;
 	}
 
+	&.is-fetching .plugin-status__indicator-icon-and-message {
+		fill: var( --color-neutral-dark );
+
+		.gridicon {
+			fill: var( --color-neutral-dark );
+			animation: 3s linear infinite;
+			animation-name: rotate-spinner;
+		}
+	}
+
 	&.is-success .plugin-status__indicator-icon-and-message {
 		fill: var( --color-success );
 
